--- a/.github/workflows/azure-static-web-apps.yml
+++ b/.github/workflows/azure-static-web-apps.yml
@@ -30,7 +30,7 @@ jobs:
           api_location: ""
           output_location: "dist"
         env:
-          VITE_PB_URL: https://api.talekeeper.org
+          VITE_PB_URL: "https://api.talekeeper.org"
 
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
